# rust-wave

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  agents.md  package.json  pnpm-lock.yaml  railway.toml  wave.toml
.codex/: config.toml
.codex-tools/railway-mcp/: package.json  start.sh
.cursor/: .mcp.json
.wave/: install-state.json
.wave/integration/: wave-0.json  wave-0.md  wave-1.json  wave-1.md  wave-2.json  wave-2.md  wave-3.json  wave-3.md  wave-4.json  wave-4.md  wave-5.json  wave-5.md  wave-6.json  wave-6.md  wave-7.json  wave-7.md
.wave/reviews/: wave-0-cont-qa.md  wave-1-cont-qa.md  wave-2-cont-qa.md  wave-3-cont-qa.md  wave-4-cont-qa.md  wave-5-cont-qa.md  wave-6-cont-qa.md  wave-7-cont-qa.md
crates/wave-app-server/: Cargo.toml
crates/wave-app-server/src/: lib.rs
crates/wave-cli/: Cargo.toml
crates/wave-cli/src/: main.rs
crates/wave-config/: Cargo.toml
crates/wave-config/src/: lib.rs
crates/wave-control-plane/: Cargo.toml
crates/wave-control-plane/src/: lib.rs
crates/wave-coordination/: Cargo.toml
crates/wave-coordination/src/: lib.rs
crates/wave-dark-factory/: Cargo.toml
crates/wave-dark-factory/src/: lib.rs
crates/wave-domain/: Cargo.toml
crates/wave-domain/src/: lib.rs
crates/wave-events/: Cargo.toml
crates/wave-events/src/: lib.rs
crates/wave-gates/: Cargo.toml
crates/wave-gates/src/: lib.rs
crates/wave-projections/: Cargo.toml
crates/wave-projections/src/: authority.rs  delivery.rs  lib.rs
crates/wave-reducer/: Cargo.toml
crates/wave-reducer/src/: lib.rs
crates/wave-results/: Cargo.toml
crates/wave-results/src/: lib.rs
crates/wave-runtime/: Cargo.toml
crates/wave-runtime/src/: adhoc.rs  lib.rs
crates/wave-spec/: Cargo.toml
crates/wave-spec/src/: lib.rs
crates/wave-trace/: Cargo.toml
crates/wave-trace/src/: lib.rs
crates/wave-tui/: Cargo.toml
crates/wave-tui/src/: lib.rs
docs/: README.md  world-class-tui.md
docs/agents/: wave-cont-qa-role.md  wave-design-role.md  wave-documentation-role.md  wave-integration-role.md
docs/concepts/: operating-modes.md  what-is-a-wave.md
docs/context7/: bundles.json
docs/guides/: terminal-surfaces.md
docs/implementation/: design.md  operator-shell-tui.md  parallel-wave-multi-runtime-architecture.md  rust-codex-refactor.md  rust-wave-0.2-architecture.md  rust-wave-0.3-notes.md  true-multi-agent-wave-architecture.md
docs/implementation/live-proofs/phase-1-scheduler-authority/: README.md  concurrent-claim-refusal.json  projection-snapshot.json  scheduler-events.jsonl
docs/implementation/live-proofs/phase-2-parallel-wave-execution/: README.md  active-run-detail-transport.json  fairness-admission-order.json  parallel-runtime-proof.json  preemption-proof.json  projection-snapshot.json  promotion-conflict.json  reserved-closure-capacity.json  scheduler-events.jsonl  trace-latest-wave-14.json  trace-replay-wave-14.json
docs/implementation/live-proofs/phase-3-runtime-policy-and-multi-runtime/: README.md  closure-override-wave-15.json  control-show-wave-15.json  control-show-wave-16.json  doctor.json  operator-runtime-transport.json  project-show.json  runtime-boundary-proof.json  worktree-skill-projection.md
docs/plans/: component-cutover-matrix.json  component-cutover-matrix.md  context7-wave-orchestrator.md  current-state.md  delivery-catalog.json  full-cycle-waves.md  mas-end-state-operator-head.md  master-plan.md  migration.md  product-factory-cutover.md  true-multi-agent-wave-rollout.md  wave-orchestrator.md
docs/reference/: repository-guidance.md  skills.md
docs/reference/runtime-config/: README.md  claude.md  codex.md
docs/research/: agent-context-cache.md  agent-context-sources.md  coordination-failure-review.md
scripts/: wave-status.sh  wave-watch.sh
services/wave-control-rust/: Cargo.toml  README.md
services/wave-control-rust/src/: main.rs
skills/: README.md
skills/app-design/: SKILL.md  app-design.md  skill.json  tui-design.md  web-app-design.md
skills/repo-codex-orchestrator/: SKILL.md  skill.json
skills/repo-ratatui-operator/: SKILL.md  skill.json
skills/repo-rust-control-plane/: SKILL.md  skill.json
skills/repo-rust-workspace/: SKILL.md  skill.json
skills/repo-wave-closure-markers/: SKILL.md  skill.json
skills/role-cont-eval/: SKILL.md
skills/role-cont-qa/: SKILL.md
skills/role-design/: SKILL.md  skill.json
skills/role-documentation/: SKILL.md
skills/role-implementation/: SKILL.md
skills/role-integration/: SKILL.md
skills/runtime-codex/: SKILL.md
skills/tui-design/: SKILL.md  skill.json  tui-design.md
skills/wave-core/: SKILL.md
waves/: 00-architecture-baseline.md  01-workspace-bootstrap.md  02-config-spec-lint.md  03-control-plane-bootstrap.md  04-codex-launcher.md  05-tui-right-panel.md  06-dark-factory-enforcement.md  07-autonomous-queue.md  08-trace-replay.md  09-dogfood.md  10-authority-core.md  11-reducer-projection-spine.md  12-result-envelope-proof-lifecycle.md  13-scheduler-authority-and-worktree-contract.md  14-parallel-wave-execution-and-merge-discipline.md  15-runtime-policy-and-multi-runtime-adapters.md  16-decision-lineage-invalidation-and-human-input.md  17-portfolio-release-and-acceptance-packages.md  18-true-mas-parallel-runtime-and-head-control.md
