[package]
name = "wave-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
wave-config.workspace = true
wave-control-plane.workspace = true
wave-dark-factory.workspace = true
wave-domain.workspace = true
wave-results.workspace = true
wave-runtime.workspace = true
wave-spec.workspace = true
wave-trace.workspace = true
