[package]
name = "wave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wave"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
wave-config.workspace = true
wave-control-plane.workspace = true
wave-dark-factory.workspace = true
wave-spec.workspace = true
