[package]
name = "wave-projections"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
# Reducer-backed planning, queue, control, and operator read-model contract.
wave-config = { path = "../wave-config" }
wave-dark-factory = { path = "../wave-dark-factory" }
wave-domain = { path = "../wave-domain" }
wave-events = { path = "../wave-events" }
wave-gates = { path = "../wave-gates" }
wave-reducer = { path = "../wave-reducer" }
wave-results = { path = "../wave-results" }
wave-spec = { path = "../wave-spec" }
wave-trace = { path = "../wave-trace" }
