[package]
name = "wave-reducer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
wave-dark-factory.workspace = true
wave-domain.workspace = true
wave-events.workspace = true
wave-gates.workspace = true
wave-spec.workspace = true
wave-trace.workspace = true

[dev-dependencies]
wave-config.workspace = true
