[package]
name = "wave-results"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
wave-config.workspace = true
wave-domain.workspace = true
wave-spec.workspace = true
wave-trace.workspace = true
