[package]
name = "wave-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
wave-config.workspace = true
wave-control-plane.workspace = true
wave-dark-factory.workspace = true
wave-spec.workspace = true
wave-trace.workspace = true
